<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity">

    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonStudent1"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/btn_student1" />

            <Button
                android:id="@+id/buttonStudent2"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/btn_student2" />

            <Button
                android:id="@+id/buttonStudent3"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/btn_student3" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>